examples/test/testpolicy10679.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10679
  namespace: namespace77
spec:
  podSelector:
    matchLabels:
      key47: value43
      key18: value46
      key13: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value18
          key39: value19
          key18: value38
      podSelector:
        matchLabels:
          key48: value25
          key22: value26
